# rexglue-sdk

./: CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: _build-platform.yaml  build-linux-aarch64.yaml  build-linux-amd64.yaml  build-win-amd64.yaml  lint.yaml  nightly.yaml
cmake/: embed_templates.cmake  ppc_test_pipeline.cmake  rexglueConfig.cmake.in  rexglue_helpers.cmake  rexglue_install.cmake
docs/: RELEASING.md
include/rex/: cvar.h  hook.h  image_info.h  rex_app.h  runtime.h
include/rex/filesystem/devices/: disc_image_device.h
include/rex/graphics/: flags.h
include/rex/graphics/format/: ucode.h
include/rex/graphics/pipeline/shader/: interpreter.h  shader.h
include/rex/kernel/crt/: heap.h
include/rex/platform/: fpscr.h
include/rex/ppc/: context.h
include/rex/system/: flags.h  kernel_state.h  xmemory.h
resources/templates/codegen/: dll_targets_cmake.inja  init_cpp.inja  init_h.inja  register_cpp.inja  sources_cmake.inja
resources/templates/init/: config_toml.inja  manifest_toml.inja  module_config_toml.inja  rexglue_cmake.inja
resources/templates/test/: ppc_config_h.inja
src/codegen/: CMakeLists.txt  analyze.cpp  builders.h  codegen_writer.cpp  discovery.cpp  discovery.h  function_graph.cpp  instruction_dispatch.cpp  recompiler.cpp  template_registry.cpp
src/codegen/builders/: control_flow.cpp  system.cpp  vector.cpp
src/core/: CMakeLists.txt  filesystem_win.cpp  logging.cpp
src/filesystem/: virtual_file_system.cpp
src/filesystem/devices/: disc_image_device.cpp  host_path_file.cpp  null_device.cpp
src/graphics/: CMakeLists.txt  command_processor.cpp  graphics_system.cpp
src/graphics/d3d12/: command_processor.cpp  pipeline_cache.cpp
src/graphics/pipeline/shader/: dxbc_translator_fetch.cpp  spirv_translator_fetch.cpp
src/graphics/pipeline/texture/: cache.cpp
src/graphics/vulkan/: command_processor.cpp
src/input/sdl/: sdl_input_driver.cpp
src/kernel/: CMakeLists.txt
src/kernel/crt/: file.cpp  heap.cpp
src/kernel/xam/: xam_input.cpp  xam_net.cpp
src/kernel/xbdm/: xbdm_misc.cpp
src/kernel/xboxkrnl/: xboxkrnl_io.cpp  xboxkrnl_memory.cpp  xboxkrnl_module.cpp  xboxkrnl_modules.cpp  xboxkrnl_rtl.cpp  xboxkrnl_threading.cpp  xboxkrnl_video.cpp
src/rexglue/: main.cpp
src/rexglue/commands/: init_command.cpp  init_command.h  migrate_command.cpp  migration_scan.cpp  test_recompiler.cpp
src/system/: CMakeLists.txt  kernel_module.cpp  kernel_state.cpp  mmio_handler.cpp  runtime.cpp  xmemory.cpp  xthread.cpp
src/ui/: CMakeLists.txt  keybinds.cpp  rex_app.cpp  window.cpp
src/ui/overlay/: settings_overlay.cpp
src/ui/vulkan/: vulkan_instance.cpp
tests/ppc/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/codegen/: template_registry_test.cpp
